tests/parser/should_fail/T984.hs

module T984 where

f _ = do
        x <- computation
        case () of
                _ ->
                        result <- computation
                        case () of () -> undefined
