tests/parser/should_fail/T984.stderr

T984.hs:6:9: error: [GHC-53786] (case ... of ...)-syntax in pattern
